z-index fix and shadow pseudo

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -976,7 +976,9 @@ body {
   height: 100%;
   position: absolute;
   width: 100%;
-  z-index: 1; }
+  z-index: 3; }
+  .object-rig:first-child {
+    z-index: 1; }
 
 .object-rig__bob, .object-rig__rotate {
   height: 100%;
@@ -1018,15 +1020,17 @@ body {
   background-repeat: no-repeat;
   height: 100%;
   left: 0;
+  opacity: .2;
   position: absolute;
   top: 0;
   transition: all 1s;
   width: 100%;
   z-index: 1;
-  -webkit-filter: sepia(100%) opacity(0.2) brightness(0.6) drop-shadow(0 0 0 #fff) hue-rotate(156deg) saturate(80);
-          filter: sepia(100%) opacity(0.2) brightness(0.6) drop-shadow(0 0 0 #fff) hue-rotate(156deg) saturate(80); }
+  -webkit-filter: sepia(100%) brightness(0.6) drop-shadow(0 0 0 #fff) hue-rotate(156deg) saturate(80);
+          filter: sepia(100%) brightness(0.6) drop-shadow(0 0 0 #fff) hue-rotate(156deg) saturate(80); }
 
-.object-shadow {
+.object-container:after {
+  content: '';
   width: 100%;
   height: 10%;
   background: #1EB9D4;
@@ -1038,16 +1042,15 @@ body {
   mix-blend-mode: multiply;
   opacity: .5;
   position: absolute;
-  z-index: 1; }
+  z-index: 2; }
 
 .object-container:hover {
   cursor: pointer; }
   .object-container:hover .object {
-    -webkit-filter: brightness(1.5) saturate(2) drop-shadow(0 0 10px rgba(255, 255, 255, 0.3)) !important;
-            filter: brightness(1.5) saturate(2) drop-shadow(0 0 10px rgba(255, 255, 255, 0.3)) !important; }
+    -webkit-filter: brightness(1.5) saturate(2) drop-shadow(0 0 10px rgba(255, 255, 255, 0.5)) !important;
+            filter: brightness(1.5) saturate(2) drop-shadow(0 0 10px rgba(255, 255, 255, 0.5)) !important; }
   .object-container:hover .object-submerged {
-    -webkit-filter: sepia(100%) opacity(0.7) brightness(1.05) drop-shadow(0 0 10px white) hue-rotate(156deg) saturate(50) !important;
-            filter: sepia(100%) opacity(0.7) brightness(1.05) drop-shadow(0 0 10px white) hue-rotate(156deg) saturate(50) !important; }
+    opacity: .5; }
 
 .object-container--new:before {
   -webkit-animation: sparkle 0.36s steps(3) infinite;
