--- a/src/scss/playground/_gpgpObjectBase.scss
+++ b/src/scss/playground/_gpgpObjectBase.scss
@@ -76,7 +76,10 @@ $size-xl: 256;
   height: 100%;
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
+  &:first-child {
+    z-index: 1;
+  }
 }
 .object-rig__bob, .object-rig__rotate {
   height: 100%;
@@ -134,18 +137,20 @@ $size-xl: 256;
   background-repeat: no-repeat;
   height: 100%;
   left: 0;
+  opacity: .2;
   position: absolute;
   top: 0;
   transition: all 1s;
   width: 100%;
   z-index: 1;
-  filter: sepia(100%) opacity(.2) brightness(.6) drop-shadow(0 0 0 #fff) hue-rotate(156deg) saturate(80);
+  filter: sepia(100%) brightness(.6) drop-shadow(0 0 0 #fff) hue-rotate(156deg) saturate(80);
 }
 
 
 
 //shadow setup
-.object-shadow {
+.object-container:after {
+  content: '';
   width: 100%;
   height: 10%;
   background: #1EB9D4;
@@ -155,7 +160,7 @@ $size-xl: 256;
   mix-blend-mode: multiply;
   opacity: .5;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 }
 
 
@@ -164,10 +169,10 @@ $size-xl: 256;
 .object-container:hover {
   cursor: pointer;
   .object {
-    filter: brightness(1.5) saturate(2) drop-shadow(0 0 10px rgba(255,255,255,.3))!important;
+    filter: brightness(1.5) saturate(2) drop-shadow(0 0 10px rgba(255,255,255,.5))!important;
   }
   .object-submerged {
-    filter: sepia(100%) opacity(.7) brightness(1.05) drop-shadow(0 0 10px white) hue-rotate(156deg)  saturate(50)!important;
+    opacity: .5;
   }
 }
 
